--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -717,7 +717,7 @@
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Achievement</th>
-                                    <th scope="col">Earned Time</th>
+                                    <th scope="col">Unlocked At</th>
                                     <th scope="col">Avg Completion</th>
                                 </tr>
                                 </thead>
