--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -627,7 +627,7 @@
                         </div>
 
                         <div class="card mb-4">
-                            <div class="card-header">Last Year</div>
+                            <div class="card-header">The Last Year</div>
                             <div class="card-body">
                                 <div id="achievement-days-chart">
                                     <i class="fas fa-spinner fa-spin"></i>
