--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -626,7 +626,7 @@
                             </div>
                         </div>
 
-                        <div class="card mb-4">
+                        <div class="card mb-4 d-none d-xl-block">
                             <div class="card-header">The Last Year</div>
                             <div class="card-body">
                                 <div id="achievement-days-chart">
