--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -635,6 +635,15 @@
                             </div>
                         </div>
 
+                        <div class="card mb-4">
+                            <div class="card-header">All Time</div>
+                            <div class="card-body">
+                                <div id="achievement-influx-chart">
+                                    <i class="fas fa-spinner fa-spin"></i>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="table-responsive">
                             <table class="table table-hover table-striped table-counts mb-0" data-row-type="achievements" data-path="/players/{{ .Player.ID }}/achievements.json" id="achievements-table">
                                 <thead class="thead-light">
