Friend dropdown on achievements

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -710,6 +710,14 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
+                                <div class="form-group">
+                                    <label for="friend">Compare with Friends</label>
+                                    <select data-placeholder="Friend" class="form-control form-control-chosen" id="friend" name="friend">
+                                        <option value="">Loading...</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="table-responsive">
