--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -712,7 +712,7 @@
                             </div>
                             <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
-                                    <label for="friend">Compare with Friends</label>
+                                    <label for="friend">Compare with Friends (Must be logged in)</label>
                                     <select data-placeholder="Friend" class="form-control form-control-chosen" id="friend" name="friend">
                                         <option value="">Loading...</option>
                                     </select>
