--- a/cmd/frontend/templates/login.gohtml
+++ b/cmd/frontend/templates/login.gohtml
@@ -32,12 +32,7 @@
                                         <input type="password" class="form-control" id="password" name="password" autocomplete="current-password" required>
                                     </div>
 
-                                    {{ if eq .Env "production" }}
-                                        <div class="form-group">
-                                            <label for="message">Captcha</label>
-                                            <div class="h-captcha" data-sitekey="{{ .HCaptchaPublic }}"></div>
-                                        </div>
-                                    {{ end }}
+                                    {{ template "hcaptcha" . }}
 
                                     <button type="submit" class="btn btn-success" aria-label="Login">Login</button>
                                 </form>
