--- a/cmd/frontend/templates/players_add.gohtml
+++ b/cmd/frontend/templates/players_add.gohtml
@@ -25,12 +25,7 @@
                                 <input type="search" class="form-control" id="search" name="search" value="{{ .Default }}" autofocus required>
                             </div>
 
-{{/*                            {{ if eq .Env "production" }}*/}}
-{{/*                                <div class="form-group">*/}}
-{{/*                                    <label for="message">Captcha</label>*/}}
-{{/*                                    <div class="h-captcha" data-sitekey="{{ .HCaptchaPublic }}"></div>*/}}
-{{/*                                </div>*/}}
-{{/*                            {{ end }}*/}}
+                            {{/*{{ template "hcaptcha" . }}*/}}
 
                             <button type="submit" class="btn btn-success" aria-label="Search">Search</button>
 
