--- a/cmd/frontend/templates/signup.gohtml
+++ b/cmd/frontend/templates/signup.gohtml
@@ -39,12 +39,7 @@
                                         <input type="password" class="form-control" id="password2" name="password2" autocomplete="new-password" required>
                                     </div>
 
-                                    {{ if eq .Env "production" }}
-                                        <div class="form-group">
-                                            <label for="message">Captcha</label>
-                                            <div class="h-captcha" data-sitekey="{{ .HCaptchaPublic }}"></div>
-                                        </div>
-                                    {{ end }}
+                                    {{ template "hcaptcha" . }}
 
                                     <button type="submit" class="btn btn-success" aria-label="Sign Up">Sign Up</button>
                                 </form>
