Show search score

--- a/cmd/frontend/templates/apps.gohtml
+++ b/cmd/frontend/templates/apps.gohtml
@@ -155,7 +155,8 @@
                             <th scope="col" nowrap="nowrap">Followers</th>
                             <th scope="col" nowrap="nowrap">Score</th>
                             <th scope="col" nowrap="nowrap">Price</th>
-                            <th scope="col"></th>
+                            <th scope="col"></th> {{/* External Link */}}
+                            <th scope="col">Score</th>
                         </tr>
                         </thead>
                         <tbody>
