--- a/cmd/frontend/templates/wishlists.gohtml
+++ b/cmd/frontend/templates/wishlists.gohtml
@@ -23,7 +23,7 @@
 
                 </div>
                 <div class="col-12">
-                    <small>Data taken from Game DB players only. To see a limited but more accurate list, see the <a href="https://store.steampowered.com/search/?filter=popularwishlist" target="_blank" rel="noopener">Steam store list</a>.</small>
+                    <small>Data taken from Game DB players only. To see a limited but probably more accurate list, see the <a href="https://store.steampowered.com/search/?filter=popularwishlist" target="_blank" rel="noopener">Steam store list</a>.</small>
                 </div>
 
             </div>
