--- a/cmd/frontend/templates/admin/stats.gohtml
+++ b/cmd/frontend/templates/admin/stats.gohtml
@@ -17,6 +17,9 @@
                     <div class="col-12 col-lg-3 mb-4">
                         <div class="btn btn-success btn-block">Commit Hash<br/>{{ .Hash }}</div>
                     </div>
+                    <div class="col-12 col-lg-3 mb-4">
+                        <div class="btn btn-success btn-block">Cores<br/>{{ .Cores }}</div>
+                    </div>
                 </div>
 
                 <h5>Players</h5>
