Show wishlist firsts

--- a/cmd/frontend/templates/wishlists.gohtml
+++ b/cmd/frontend/templates/wishlists.gohtml
@@ -61,7 +61,8 @@
                                 <tr>
                                     <th scope="col">Game</th>
                                     <th scope="col">Wishlists</th>
-                                    <th scope="col">Avg Position</th>
+                                    <th scope="col">Firsts</th>
+                                    <th scope="col">Avg Pos</th>
                                     <th scope="col">Followers</th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Release Date</th>
