Allow multiple news feeds

--- a/cmd/frontend/templates/news.gohtml
+++ b/cmd/frontend/templates/news.gohtml
@@ -26,7 +26,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="form-group">
                             <label for="feed">Feed</label>
-                            <select data-placeholder="Filter" class="form-control form-control-chosen" id="feed" name="feed">
+                            <select multiple data-placeholder="Filter" class="form-control form-control-chosen" id="feed" name="feed">
                                 <option value="" selected>All Feeds</option>
                                 {{ range .Feeds }}
                                     <option value="{{ .ID }}">{{ .GetName }} ({{ .GetCount }})</option>
