--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -225,6 +225,12 @@
                     <li class="nav-item dropdown {{if .IsMorePage }}active{{end}}">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu">
+
+                            <a class="dropdown-item" href="/api/gamedb">API Docs (Game DB)</a>
+                            <a class="dropdown-item" href="/api/steam">API Docs (Steam)</a>
+
+                            <div class="dropdown-divider"></div>
+
                             <a class="dropdown-item" href="/discord-bot">Discord Bot</a>
                             <a class="dropdown-item" href="/achievements">Achievements Search</a>
                             <a class="dropdown-item" href="/experience">Experience Table</a>
@@ -232,10 +238,6 @@
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/info">Info</a>
 
-                            <div class="dropdown-divider"></div>
-
-                            <a class="dropdown-item" href="/api/gamedb">API (Game DB)</a>
-                            <a class="dropdown-item" href="/api/steam">API (Steam)</a>
                         </div>
                     </li>
 
