More news filters

--- a/cmd/frontend/templates/news.gohtml
+++ b/cmd/frontend/templates/news.gohtml
@@ -15,11 +15,13 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="form-group">
-                            <label for="filter">Filter</label>
+                            <label for="filter">Filter (Must be logged in)</label>
                             <select data-placeholder="Filter" class="form-control form-control-chosen" id="filter" name="filter">
                                 <option value="" selected>All News</option>
-                                <option value="mine">My Game News (Must be logged in)</option>
-                                <option value="popular">Popular Game News</option>
+                                <option value="popular">Popular Games</option>
+                                <option value="owned">My Games</option>
+                                <option value="played">My Played Games</option>
+                                <option value="recent">My Recent Games</option>
                             </select>
                         </div>
                     </div>
