--- a/cmd/frontend/templates/group.gohtml
+++ b/cmd/frontend/templates/group.gohtml
@@ -23,7 +23,7 @@
                 <a href="{{ .Group.GetURL }}" target="_blank" rel="noopener"><i class="fas fa-link"></i> Steam Group Page</a>
 
                 {{ if eq .Group.Type "game" }}
-                    <a href="/games/{{ .Group.AppID }}"><i class="fas fa-gamepad"></i> App Page</a>
+                    <a href="/games/{{ .Group.AppID }}"><i class="fas fa-gamepad"></i> Game DB Page</a>
                 {{ end }}
             </small>
 
