Hide empty panel

--- a/cmd/frontend/templates/group.gohtml
+++ b/cmd/frontend/templates/group.gohtml
@@ -45,10 +45,12 @@
                     </div>
                 </div>
 
-                <div class="card mb-4">
-                    <h5 class="card-header">Description</h5>
-                    <div class="card-body">{{ .Summary }}</div>
-                </div>
+                {{ if eq .Group.Type "group" }}
+                    <div class="card mb-4">
+                        <h5 class="card-header">Description</h5>
+                        <div class="card-body">{{ .Summary }}</div>
+                    </div>
+                {{ end }}
 
                 <h5>Game DB Members</h5>
                 <table class="table table-hover table-striped table-counts mb-0" data-path="/groups/{{ .Group.ID }}/table.json" id="players" data-row-type="players">
